// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PublicLayoutWrapper rendering tests isAuthenticated false - test 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-background"
    data-testid="public-layout-wrapper"
  >
    <header
      class="border-b bg-background"
      data-testid="header"
    >
      <div
        class="mx-auto flex max-w-7xl items-center px-4 py-3 sm:gap-4 sm:px-6 sm:py-4"
      >
        <div
          class="flex-1"
        >
          <a
            class="text-lg font-bold whitespace-nowrap sm:text-xl"
            data-testid="app-link"
            href="/"
          >
            Vision Notes
          </a>
        </div>
        <div
          class="flex-2"
        >
          <div
            class="hidden items-center justify-between gap-6 sm:flex"
            data-testid="desktop-nav"
          >
            <nav
              class="flex items-center gap-1"
              data-testid="navigation"
            >
              <a
                class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
                data-testid="explore-nav-item"
                href="/explore"
              >
                Entdecken
              </a>
              <a
                class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
                data-testid="pricing-nav-item"
                href="https://www.vision-notes.com/pricing"
              >
                Preise
              </a>
              <a
                class="rounded-md px-3 py-2 font-medium text-foreground/75 transition-colors hover:bg-accent hover:text-foreground"
                data-testid="blog-nav-item"
                href="https://www.vision-notes.com/blog"
              >
                Blog
              </a>
            </nav>
            <div
              class="flex items-center gap-3"
            >
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3"
                data-slot="button"
                data-testid="sign-in-link"
                href="/auth/sign-in"
              >
                Anmelden
              </a>
              <a
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
                data-slot="button"
                data-testid="sign-up-link"
                href="/auth/sign-up"
              >
                Kostenlos starten
              </a>
            </div>
          </div>
          <div
            class="flex justify-end"
            data-testid="mobile-nav"
          >
            <div
              data-slot="sheet"
              data-testid="mock-react-dialog-root"
            >
              <button
                aria-label="Menü öffnen"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 sm:hidden"
                data-slot="button"
                data-testid="mobile-nav-trigger"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-menu h-7 w-7"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 5h16"
                  />
                  <path
                    d="M4 12h16"
                  />
                  <path
                    d="M4 19h16"
                  />
                </svg>
              </button>
              <div
                data-slot="sheet-portal"
                data-testid="mock-react-dialog-portal"
              >
                <div
                  class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                  data-slot="sheet-overlay"
                  data-testid="mock-react-dialog-overlay"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
    <main
      class="flex-1"
    >
      <div
        data-testid="test-1"
      />
    </main>
    <footer
      class="border-t bg-muted/50 py-10"
      data-testid="footer"
    >
      <div
        class="mx-auto max-w-7xl px-4 sm:px-6"
      >
        <div
          class="flex flex-col gap-16 sm:flex-row"
        >
          <div
            class="flex max-w-3xl flex-1 flex-col gap-5"
          >
            <a
              class="text-lg whitespace-nowrap sm:text-xl"
              data-testid="app-link"
              href="/"
            >
              Vision Notes
            </a>
            <p
              class="text-muted-foreground"
            >
              Große Prompt-Bibliothek. Individuelle Anpassung. Leichte Erstellung. Vision Notes revolutioniert deinen gesamten Prompt-Workflow.
            </p>
          </div>
          <div
            class="flex gap-16"
          >
            <div
              class="flex flex-col gap-4"
              data-testid="company-links"
            >
              <p
                class="text-muted-foreground"
              >
                Unternehmen
              </p>
              <nav
                class="flex flex-col gap-3"
              >
                <a
                  class="hover:underline"
                  data-testid="blog-link"
                  href="https://www.vision-notes.com/blog"
                >
                  Blog
                </a>
              </nav>
            </div>
            <div
              class="flex flex-col gap-4"
              data-testid="legal-links"
            >
              <p
                class="text-muted-foreground"
              >
                Rechtliches
              </p>
              <nav
                class="flex flex-col gap-3"
              >
                <a
                  class="hover:underline"
                  data-testid="agb-link"
                  href="https://www.iubenda.com/terms-and-conditions/97062585"
                  rel="noopener noreferrer nofollow"
                  target="_blank"
                >
                  AGB
                </a>
                <a
                  class="hover:underline"
                  data-testid="privacypolicy-link"
                  href="https://www.iubenda.com/privacy-policy/97062585/full-legal"
                  rel="noopener noreferrer nofollow"
                  target="_blank"
                >
                  Datenschutz
                </a>
                <a
                  class="hover:underline"
                  data-testid="cookies-link"
                  href="https://www.iubenda.com/privacy-policy/97062585/cookie-policy"
                  rel="noopener noreferrer nofollow"
                  target="_blank"
                >
                  Cookies
                </a>
                <a
                  class="hover:underline"
                  data-testid="impressum-link"
                  href="https://www.vision-notes.com/legal/impressum"
                  rel="noopener noreferrer nofollow"
                >
                  Impressum
                </a>
              </nav>
            </div>
          </div>
        </div>
        <div
          class="mt-10"
        >
          <p
            class="text-sm text-muted-foreground"
          >
            © 
            2026
             
            Vision Notes
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;

exports[`PublicLayoutWrapper rendering tests isAuthenticated true - test 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col bg-background"
    data-testid="public-layout-wrapper"
  >
    <header
      class="border-b bg-background"
      data-testid="header"
    >
      <div
        class="mx-auto flex max-w-7xl items-center px-4 py-3 sm:gap-4 sm:px-6 sm:py-4"
      >
        <div
          class="flex-1"
        >
          <a
            class="text-lg font-bold whitespace-nowrap sm:text-xl"
            data-testid="app-link"
            href="/"
          >
            Vision Notes
          </a>
        </div>
        <div
          class="flex-2"
        >
          <div
            class="hidden items-center justify-end gap-6 sm:flex"
            data-testid="desktop-nav"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
              data-slot="button"
              data-testid="to-library-link"
              href="/"
            >
              Zur Bibliothek
            </a>
          </div>
          <div
            class="flex justify-end"
            data-testid="mobile-nav"
          >
            <div
              data-slot="sheet"
              data-testid="mock-react-dialog-root"
            >
              <button
                aria-label="Menü öffnen"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent hover:text-accent-foreground dark:hover:bg-accent/50 size-9 sm:hidden"
                data-slot="button"
                data-testid="mobile-nav-trigger"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-menu h-7 w-7"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 5h16"
                  />
                  <path
                    d="M4 12h16"
                  />
                  <path
                    d="M4 19h16"
                  />
                </svg>
              </button>
              <div
                data-slot="sheet-portal"
                data-testid="mock-react-dialog-portal"
              >
                <div
                  class="data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 fixed inset-0 z-50 bg-black/50"
                  data-slot="sheet-overlay"
                  data-testid="mock-react-dialog-overlay"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
    <main
      class="flex-1"
    >
      <div
        data-testid="test-1"
      />
    </main>
    <footer
      class="border-t bg-muted/50 py-10"
      data-testid="footer"
    >
      <div
        class="mx-auto max-w-7xl px-4 sm:px-6"
      >
        <div
          class="flex flex-col gap-16 sm:flex-row"
        >
          <div
            class="flex max-w-3xl flex-1 flex-col gap-5"
          >
            <a
              class="text-lg whitespace-nowrap sm:text-xl"
              data-testid="app-link"
              href="/"
            >
              Vision Notes
            </a>
            <p
              class="text-muted-foreground"
            >
              Große Prompt-Bibliothek. Individuelle Anpassung. Leichte Erstellung. Vision Notes revolutioniert deinen gesamten Prompt-Workflow.
            </p>
          </div>
          <div
            class="flex gap-16"
          >
            <div
              class="flex flex-col gap-4"
              data-testid="company-links"
            >
              <p
                class="text-muted-foreground"
              >
                Unternehmen
              </p>
              <nav
                class="flex flex-col gap-3"
              >
                <a
                  class="hover:underline"
                  data-testid="blog-link"
                  href="https://www.vision-notes.com/blog"
                >
                  Blog
                </a>
              </nav>
            </div>
            <div
              class="flex flex-col gap-4"
              data-testid="legal-links"
            >
              <p
                class="text-muted-foreground"
              >
                Rechtliches
              </p>
              <nav
                class="flex flex-col gap-3"
              >
                <a
                  class="hover:underline"
                  data-testid="agb-link"
                  href="https://www.iubenda.com/terms-and-conditions/97062585"
                  rel="noopener noreferrer nofollow"
                  target="_blank"
                >
                  AGB
                </a>
                <a
                  class="hover:underline"
                  data-testid="privacypolicy-link"
                  href="https://www.iubenda.com/privacy-policy/97062585/full-legal"
                  rel="noopener noreferrer nofollow"
                  target="_blank"
                >
                  Datenschutz
                </a>
                <a
                  class="hover:underline"
                  data-testid="cookies-link"
                  href="https://www.iubenda.com/privacy-policy/97062585/cookie-policy"
                  rel="noopener noreferrer nofollow"
                  target="_blank"
                >
                  Cookies
                </a>
                <a
                  class="hover:underline"
                  data-testid="impressum-link"
                  href="https://www.vision-notes.com/legal/impressum"
                  rel="noopener noreferrer nofollow"
                >
                  Impressum
                </a>
              </nav>
            </div>
          </div>
        </div>
        <div
          class="mt-10"
        >
          <p
            class="text-sm text-muted-foreground"
          >
            © 
            2026
             
            Vision Notes
          </p>
        </div>
      </div>
    </footer>
  </div>
</div>
`;
